begin dice work

--- a/dice.html
+++ b/dice.html
@@ -43,7 +43,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="finals.html"
@@ -51,23 +51,17 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="dice.html">Shoot dice</a>
+                <a class="nav-link active" aria-current="page" href="dice.html"
+                  >Shoot dice</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main>
-      <p style="text-align: center">
-        Hello, and welcome to my calcuator website! I made this mostly because I
-        wanted to learn how to play dice, but it morphed into this over time. I
-        hope you enjoy it! Feel free to check out the
-        <a href="https://github.com/townselj/Collection-of-Cool-Kalculators"
-          >github repository</a
-        >
-        if you see any bugs/want to support it.
-      </p>
+    <main style="text-align: center;">
+        <h1>Roll Dice</h1>
     </main>
   </body>
 </html>
