--- a/dice.html
+++ b/dice.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="shortcut icon" href="images/OIP.jpg" type="image/x-icon" />
+    <script src="dice.js"></script>
   </head>
   <body>
     <header>
@@ -43,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="finals.html"
@@ -62,6 +63,10 @@
     </header>
     <main style="text-align: center;">
         <h1>Roll Dice</h1>
+        <div id="p1"></div>
+        <div id="p2"></div>
+        <div id="result"></div>
+        <button type="button" onclick="roll()" style="border-radius: 10px;">Roll Dice</button>
     </main>
   </body>
 </html>
