--- a/dice.html
+++ b/dice.html
@@ -47,13 +47,8 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="finals.html"
-                  >Final/midterm calcuator</a
-                >
-              </li>
-              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="dice.html"
-                  >Shoot dice</a
+                  >Roll dice</a
                 >
               </li>
             </ul>
