--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="finals.html"
-                  >Final/midterm calcuator</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="dice.html">Shoot dice</a>
+                <a class="nav-link" href="dice.html">Roll dice</a>
               </li>
             </ul>
           </div>
